Replaced BlueCloth w/ Redcarpet; made TextEditor buttons bigger; fixed bugs with truncation

--- a/app/assets/stylesheets/shared/text_editor.scss
+++ b/app/assets/stylesheets/shared/text_editor.scss
@@ -22,4 +22,10 @@
     border: 1px dotted $border-grey;
     padding: 6px 12px;
   }
+  .btn-toolbar {
+    margin-bottom: 5px;
+    .btn {
+      min-width: 30px;
+    }
+  }
 }
